--- a/uActivityPub/App_Plugins/uActivityPub/Lang/en-us.xml
+++ b/uActivityPub/App_Plugins/uActivityPub/Lang/en-us.xml
@@ -2,6 +2,6 @@
 <language alias="en" intName="English (US)" localName="English (US)" lcid="" culture="en-US">
     <area alias="treeHeaders">
         <key alias="sync">Synchronization</key>
-        <key alias="uactivitysync">uActivitySync</key>
+        <key alias="uactivitypub">uActivityPub</key>
     </area>
 </language>
