--- a/uActivityPub/App_Plugins/uActivityPub/Lang/en-us.xml
+++ b/uActivityPub/App_Plugins/uActivityPub/Lang/en-us.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <language alias="en" intName="English (US)" localName="English (US)" lcid="" culture="en-US">
     <area alias="treeHeaders">
-        <key alias="sync">Synchronization</key>
-        <key alias="uactivitypub">uActivityPub</key>
+        <key alias="uActivityPub">uActivityPub</key>
     </area>
 </language>
